@@ -93,6 +93,11 @@ public class RequestSaver {
 		dm.put("RENCI OSG (not a GENI resource)", "osgvmsite.rdf#osgvmsite");
 		dm.put("NICTA", "nictavmsite.rdf#nictavmsite");
 
+		dm.put("RENCI XO Rack Net", "rciNet.rdf#rciNet");
+		dm.put("BBN/GPO XO Rack Net", "bbnNet.rdf#bbnNet");
+		dm.put("NLR Net", "nlr.rdf#nlr");
+		dm.put("BEN Net", "ben.rdf#ben");
+		
 		domainMap = Collections.unmodifiableMap(dm);
 	}
 	
@@ -552,7 +557,7 @@ public class RequestSaver {
 	}
 	
 	/**
-	 * Do a reverse lookip on domain (NDL -> short name)
+	 * Do a reverse lookup on domain (NDL -> short name)
 	 * @param dom
 	 * @return
 	 */
@@ -563,7 +568,9 @@ public class RequestSaver {
 		String domainName = StringUtils.removeStart(dom.getURI(), NdlCommons.ORCA_NS);
 		if (domainName == null)
 			return null;
+		// remove one or the other
 		domainName = StringUtils.removeEnd(domainName, "/Domain");
+		domainName = StringUtils.removeEnd(domainName, "/Domain/vlan");
 		for (Iterator<Map.Entry<String, String>> domName = domainMap.entrySet().iterator(); domName.hasNext();) {
 			Map.Entry<String, String> e = domName.next();
 			if (domainName.equals(e.getValue()))
